# CraftList-Api

./: .gitignore  Cargo.toml  README.md  config.json.example
craftping/: Cargo.toml
craftping/src/: error.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240531_134809_create_users_table.rs  m20240531_140055_create_auth_table.rs  m20240531_140153_create_servers_table.rs  m20240531_140157_create_versions_table.rs  m20240531_140207_create_categories_table.rs  m20240531_140213_create_servers_info_table.rs  m20240531_140220_create_server_categories_table.rs  m20240531_140238_create_ads_table.rs  m20240531_140243_create_players_graph_table.rs  m20240531_140339_create_reviews_table.rs  m20240604_185157_make_email_unique.rs  m20240607_123717_add_user_role.rs  m20240612_180337_add_version_protocol.rs
src/: client_update.rs  docs.rs  error.rs  main.rs  sender.rs  tasks.rs  utils.rs
src/controllers/: mod.rs
src/controllers/auth/: login.rs  mod.rs  refresh.rs  register.rs
src/controllers/categories/: add_category.rs  list_categories.rs  mod.rs  remove_category.rs  update_category.rs
src/controllers/servers/: add_server.rs  get_server.rs  get_user_servers.rs  list_servers.rs  mod.rs  utils.rs
src/controllers/versions/: add_version.rs  list_versions.rs  mod.rs  remove_version.rs  update_version.rs
src/entities/: ads.rs  auth.rs  categories.rs  mod.rs  players_graph.rs  prelude.rs  reviews.rs  sea_orm_active_enums.rs  server_categories.rs  servers.rs  servers_info.rs  users.rs  versions.rs
